# ollama-chatbot

./: .env  .gitignore  README.md  index.html  main.py  pyproject.toml
app/: main.py
app/api/: chat.py
app/domain/: models.py
app/schemas/: chat.py
app/templates/: index.html
scripts/: dev.py  start.py
services/: chat_services.py
tests/: test_chat_service.py
