[project]
name = "fastapi-ollama-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Damirdine ALI SOILIHI",email = "damirdine@outlook.fr"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
