[tool.poetry]
name = "ollama-chatbot"
version = "0.1.0"
description = ""
authors = ["Damirdine ALI SOILIHI <damirdine@outlook.fr>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
jinja2 = "^3.1.6"
requests = "^2.32.3"
httpx = "^0.28.1"
pytest = "^8.3.5"
python-dotenv = "^1.1.0"

[tool.poetry.scripts]
dev = "scripts.dev:main"
start = "scripts.start:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
